--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,20 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@replit/vite-plugin-cartographer": "^0.2.8",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
+    "@vitejs/plugin-react": "^4.7.0",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-zod": "^0.8.3",
     "express": "^4.18.2",
-    "drizzle-orm": "^0.29.0",
+    "nanoid": "^5.0.0",
+    "postgres": "^3.4.7",
     "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@replit/vite-plugin-runtime-error-modal": "*",
-    "@replit/vite-plugin-cartographer": "*",
-    "nanoid": "^5.0.0"
+    "zod": "^4.0.15"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "@types/express": "^4.17.21"
+    "typescript": "^5.4.5"
   }
 }
