chore: exclude frontend and vite config files from server tsconfig for Render deployment

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,8 +18,14 @@
   },
   "include": [
     "./**/*.ts",
-    "../shared/schema.ts",
-    "../vite.config.ts"
+    "../shared/schema.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "../vite.config.ts",
+    "../client",
+    "../client/**",
+    "../vite.ts"
+  ]
 }
