--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wouter": "^3.7.1"
