--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "client",
   "version": "1.0.0",
   "private": true,
@@ -19,8 +20,11 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "typescript-eslint": "^8.39.0",
     "vite": "^5.2.0"
   }
 }
