--- a/client/package.json
+++ b/client/package.json
@@ -9,24 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.84.2",
-    "@tanstack/react-query-devtools": "^5.84.2",
-    "class-variance-authority": "^0.7.1",
-    "lucide-react": "^0.539.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "wouter": "^3.7.1"
+    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-dropdown-menu": "2.1.15",
+    "@radix-ui/react-popover": "1.1.14",
+    "@radix-ui/react-toast": "1.2.14",
+    "@radix-ui/react-tooltip": "1.0.7",
+    "@tanstack/react-query": "4.29.7",
+    "@tanstack/react-query-devtools": "4.29.7",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "lucide-react": "0.295.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "2.3.0",
+    "wouter": "3.7.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react": "^7.37.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript-eslint": "^8.39.0",
-    "vite": "^5.2.0"
+    "@vitejs/plugin-react": "4.3.4",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.41",
+    "serve": "14.2.4",
+    "tailwindcss": "3.4.10",
+    "tailwindcss-animate": "1.0.7",
+    "typescript": "5.5.4",
+    "vite": "5.4.19"
   }
 }
